Add generic sig to LookUpTable as it almost exclusively uses String.
SpInstCGS4 and SpInstMichelle required special handling, but appear to
work correctly when compared to previous versions.